src/test/ui/issues/issue-28625.stderr
error[E0512]: transmute called with types of different sizes
  --> $DIR/issue-28625.rs:12:14
   |
LL |     unsafe { std::mem::transmute(a) } //~ ERROR transmute called with types of different sizes
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: &ArrayPeano<T> (N bits)
   = note: target type: &[T] (N bits)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
